# openpgp-ca

./: .dockerignore  .env  .gitignore  .gitlab-ci.yml  .rustfmt.toml  Cargo.lock.license  Cargo.toml  Dockerfile  README.md  about.txt  alice.revoc  bob.revoc  rustfmt.toml  test.oca
.reuse/: dep5
debian/: changelog  control  copyright  rules
doc/: book.toml
doc/src/: ABOUT.md  INSTALL.md  README.md  SUMMARY.md  about.md  bridging.md  cargo.md  database.md  details.md  docker.md  flow-bridge.md  flow-central.md  flow-decentral.md  flow-inspect.md  flow-publish.md  flow-revocation.md  flow-wkd.md  glossary.md  help.md  keys-create.md  keys-import.md  keys-inspect.md  keys-publish.md  keys-revocation.md  start.md  tradeoffs.md
gnupg-test-wrapper/: Cargo.toml
gnupg-test-wrapper/src/: lib.rs
kustomize/base/: deployment.yaml  kustomization.yaml  pvc.yaml
kustomize/example/: add-domain.patch.yaml  kustomization.yaml
kustomize/example_with_ingress/: ingress.yaml  kustomization.yaml
kustomize/restd/: kustomization.yaml  restd.patch.yaml  service.yaml
migrations/2019-07-01-194508_database/: down.sql  up.sql
migrations/2019-12-25-222201_database/: down.sql  up.sql
migrations/2020-01-30-203600_database/: down.sql  up.sql
migrations/2020-08-04-150000_database/: down.sql  up.sql
migrations/2020-08-12-150000_database/: down.sql  up.sql
migrations/2020-08-17-130000_database/: up.sql
migrations/2020-10-13-130000_extend_certs/: down.sql  up.sql
openpgp-ca-bin/: Cargo.toml  README.md
openpgp-ca-bin/src/: bin.rs  cli.rs
openpgp-ca-lib/: Cargo.toml  diesel.toml
openpgp-ca-lib/migrations/2022-08-07-220000_ca_card/: down.sql  up.sql
openpgp-ca-lib/migrations/2023-01-03-130000_ca_card/: down.sql  up.sql
openpgp-ca-lib/migrations/2023-03-15-130000_queue/: down.sql  up.sql
openpgp-ca-lib/src/: backend.rs  bridge.rs  ca.rs  ca_secret.rs  card.rs  cert.rs  export.rs  lib.rs  pgp.rs  revocation.rs  secret.rs  storage.rs  types.rs  update.rs
openpgp-ca-lib/src/backend/: card.rs  softkey.rs  split.rs
openpgp-ca-lib/src/db/: mod.rs  models.rs  schema.rs
openpgp-ca-lib/tests/: card.rs  test_gpg.rs  test_oca.rs  test_split.rs  wkd.rs
openpgp-ca-lib/tests/data/: example-alice-sha1.oca
openpgp-ca-lib/tests/util/: gnupg_test_wrapper.rs  mod.rs
openpgp-ca-restd/: Cargo.toml
openpgp-ca-restd/contrib/etc/: env
openpgp-ca-restd/contrib/systemd/: openpgp-ca-restd.service
openpgp-ca-restd/contrib/sysusers.d/: openpgp-ca-restd.conf
openpgp-ca-restd/contrib/tmpfiles.d/: openpgp-ca-restd.conf
openpgp-ca-restd/src/: bin.rs  cert_info.rs  cli.rs  client.rs  json.rs  lib.rs  process_certs.rs  restd.rs  util.rs
openpgp-ca-restd/tests/: gnupg_test_wrapper.rs  test_restd.rs
public/: index.html
src/: bin.rs  bridge.rs  ca.rs  ca_public.rs  ca_secret.rs  cas.rs  cert.rs  cli.rs  cli.yml  db.rs  export.rs  import.rs  lib.rs  main.rs  models.rs  pgp.rs  revocation.rs  schema.rs  schema.rs.license  update.rs
src/db/: mod.rs  models.rs
src/restd/: README.md  bin.rs  cert_info.rs  certinfo.rs  cli.rs  client.rs  json.rs  mod.rs  oca_json.rs  process_certs.rs  restd.rs  util.rs
tests/: test_clap.rs  test_gpg.rs  test_oca.rs  test_restd.rs
tests/gnupg/: mod.rs
tests/tools/: mod.rs
