# SPDX-FileCopyrightText: 2019-2020 Heiko Schaefer <heiko@schaefer.name>
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "openpgp-ca"
version = "0.9.2"
description = "OpenPGP CA is a tool for managing OpenPGP keys within organizations"
authors = ["Heiko Schaefer <heiko@schaefer.name>"]
license = "GPL-3.0-or-later"
categories = ["cryptography", "email"]
keywords = ["OpenPGP", "Sequoia", "PGP"]
homepage = "https://gitlab.com/openpgp-ca/openpgp-ca"
repository = "https://gitlab.com/openpgp-ca/openpgp-ca"
documentation = "https://openpgp-ca.gitlab.io/openpgp-ca/"
edition = "2018"

[lib]
name = "openpgp_ca_lib"
path = "src/lib.rs"

[[bin]]
name = "openpgp-ca"
path = "src/bin.rs"

[[bin]]
name = "openpgp-ca-restd"
path = "src/restd/bin.rs"

[dependencies]
structopt = "0.3"
clap = "2.33"

diesel = { version = "1.4", features = ["sqlite"] }
diesel_migrations = "1.4"

lazy_static = "1.4"
once_cell = "1.4"
dotenv = "0.15"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }


chbs = "0.0.8"
publicsuffix = "1.5"

sha2 = "0.9"

futures = "0.3"
futures-util = "0.3"

#sequoia-openpgp = { git = "https://gitlab.com/sequoia-pgp/sequoia.git", tag = "v0.20.0" }
#sequoia-net = { git = "https://gitlab.com/sequoia-pgp/sequoia.git", tag = "v0.20.0" }
#sequoia-core = { git = "https://gitlab.com/sequoia-pgp/sequoia.git", tag = "v0.20.0" }

sequoia-openpgp = { git = "https://gitlab.com/sequoia-pgp/sequoia.git", rev = "e9439f7c4b902265d3f599c224e5e5ac9798014e" }
sequoia-net = { git = "https://gitlab.com/sequoia-pgp/sequoia.git", rev = "e9439f7c4b902265d3f599c224e5e5ac9798014e" }
sequoia-core = { git = "https://gitlab.com/sequoia-pgp/sequoia.git", rev = "e9439f7c4b902265d3f599c224e5e5ac9798014e" }

# restd
# -> use unreleased rocket 0.5 for now (works with rust stable)
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "master" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", branch = "master", features = ["handlebars_templates"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


# tests
tempfile = "3.1"
csv = "1.1"
rexpect = "0.4"
reqwest = { version = "0.10", features = ["blocking", "json"] }

# for rocket 0.5
[dependencies.tokio]
version = "0.2.22"
features = ["fs", "io-std", "io-util", "rt-threaded", "sync", "signal", "macros"]
