# SPDX-FileCopyrightText: 2019-2021 Heiko Schaefer <heiko@schaefer.name>
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "openpgp-ca"
version = "0.10.1"
description = "OpenPGP CA is a tool for managing and certifying OpenPGP keys"
authors = ["Heiko Schaefer <heiko@schaefer.name>"]
license = "GPL-3.0-or-later"
categories = ["cryptography", "email"]
keywords = ["OpenPGP", "Sequoia", "PGP"]
homepage = "https://openpgp-ca.org"
repository = "https://gitlab.com/openpgp-ca/openpgp-ca"
documentation = "https://openpgp-ca.org/doc/"
edition = "2018"

[lib]
name = "openpgp_ca_lib"
path = "src/lib.rs"

[[bin]]
name = "openpgp-ca"
path = "src/bin.rs"

[[bin]]
name = "openpgp-ca-restd"
path = "src/restd/bin.rs"

[dependencies]
structopt = "0.3"
clap = "2.33"

diesel = { version = "1.4", features = ["sqlite"] }
diesel_migrations = "1.4"

lazy_static = "1.4"
once_cell = "1.4"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }

reqwest = { version = "0.10", features = ["blocking", "json"] }

chbs = "0.0.8"
publicsuffix = "1.5"

sha2 = "0.9"

futures = "0.3"
futures-util = "0.3"

openpgp-keylist = "0.2"

sequoia-openpgp = "1.1"
sequoia-net = "0.23"

# restd
# -> use unreleased rocket 0.5 for now (works with rust stable)
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "master" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", branch = "master", features = ["handlebars_templates"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# for rocket 0.5
[dependencies.tokio]
version = "0.2.22"
features = ["fs", "io-std", "io-util", "rt-threaded", "sync", "signal", "macros"]

# for tests
[dev-dependencies]
tempfile = "3.1"
csv = "1.1"
rexpect = "0.4"
