# SPDX-FileCopyrightText: 2019-2021 Heiko Schaefer <heiko@schaefer.name>
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "gnupg-test-wrapper"
version = "0.0.1"
description = "A wrapper for using GnuPG in integration tests. Don't use for security critical purposes!"
authors = ["Heiko Schaefer <heiko@schaefer.name>"]
license = "GPL-3.0-or-later"
categories = ["cryptography", "email"]
keywords = ["OpenPGP", "GnuPG", "PGP"]
repository = "https://gitlab.com/openpgp-ca/openpgp-ca"
edition = "2018"

[dependencies]
anyhow = "1.0"
tempfile = "3.1"
rexpect = "0.4"
csv = "1.1"
