# SPDX-FileCopyrightText: 2019-2022 Heiko Schaefer <heiko@schaefer.name>
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "openpgp-ca"
version = "0.12.0"
description = "OpenPGP CA is a tool for managing and certifying OpenPGP keys"
authors = ["Heiko Schaefer <heiko@schaefer.name>"]
license = "GPL-3.0-or-later"
categories = ["cryptography", "email"]
keywords = ["OpenPGP", "Sequoia", "PGP"]
homepage = "https://openpgp-ca.org"
repository = "https://gitlab.com/openpgp-ca/openpgp-ca"
documentation = "https://openpgp-ca.org/doc/"
edition = "2018"

[[bin]]
name = "oca"
path = "src/bin.rs"

[dependencies]
clap = { version = "3", features = ["derive"] }
anyhow = "1.0"
rpassword = "7"

openpgp-ca-lib = { path = "../openpgp-ca-lib", version = "0.12" }
