# SPDX-FileCopyrightText: 2019-2022 Heiko Schaefer <heiko@schaefer.name>
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "openpgp-ca-lib"
version = "0.12.0-pre"
description = "OpenPGP CA is a tool for managing and certifying OpenPGP keys"
authors = ["Heiko Schaefer <heiko@schaefer.name>"]
license = "GPL-3.0-or-later"
categories = ["cryptography", "email"]
keywords = ["OpenPGP", "Sequoia", "PGP"]
homepage = "https://openpgp-ca.org"
repository = "https://gitlab.com/openpgp-ca/openpgp-ca"
documentation = "https://openpgp-ca.org/doc/"
edition = "2018"

[lib]
name = "openpgp_ca_lib"
path = "src/lib.rs"

[dependencies]
diesel = { version = "1.4", features = ["sqlite"] }
diesel_migrations = "1.4"

anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }

tokio = { version = "1.13.1" }

chbs = "0.1"
addr = "0.14"

sha2 = "0.9"

openpgp-keylist = "0.2"

sequoia-openpgp = "1.8"
sequoia-net = "0.24"

# for tests
[dev-dependencies]
gnupg-test-wrapper = { path = "../gnupg-test-wrapper" }
tempfile = "3.1"
