# SPDX-FileCopyrightText: 2019-2022 Heiko Schaefer <heiko@schaefer.name>
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "openpgp-ca-lib"
version = "0.13.0-pre"
description = "OpenPGP CA is a tool for managing and certifying OpenPGP keys"
authors = ["Heiko Schaefer <heiko@schaefer.name>"]
license = "GPL-3.0-or-later"
categories = ["cryptography", "email"]
keywords = ["OpenPGP", "Sequoia", "PGP"]
homepage = "https://openpgp-ca.org"
repository = "https://gitlab.com/openpgp-ca/openpgp-ca"
documentation = "https://openpgp-ca.org/doc/"
edition = "2018"

[lib]
name = "openpgp_ca_lib"
path = "src/lib.rs"

[features]
default = ["softkey"]
softkey = []
card = []

[dependencies]
diesel = { version = "1.4", features = ["sqlite"] }
diesel_migrations = "1.4"

anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }

tokio = { version = "1.13.1" }

serde = "1"
serde_json = "1"

chbs = "0.1"
addr = "0.15"

sha2 = "0.10"

rand = "0.8"

openpgp-keylist = "0.2"

sequoia-openpgp = "1.8"
sequoia-net = "0.25"

openpgp-card = "0.3.3"
openpgp-card-pcsc = "0.3"
openpgp-card-sequoia = "0.1"

# for tests
[dev-dependencies]
tempfile = "3.1"
rusqlite = "0.14" # this version matches dependency-versions for libsqlite3-sys with diesel 1.4
expectrl = "0.6"
csv = "1.1"
