# SPDX-FileCopyrightText: 2019-2022 Heiko Schaefer <heiko@schaefer.name>
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "openpgp-ca-restd"
version = "0.11.1"
description = "OpenPGP CA is a tool for managing and certifying OpenPGP keys"
authors = ["Heiko Schaefer <heiko@schaefer.name>"]
license = "GPL-3.0-or-later"
categories = ["cryptography", "email"]
keywords = ["OpenPGP", "Sequoia", "PGP"]
homepage = "https://openpgp-ca.org"
repository = "https://gitlab.com/openpgp-ca/openpgp-ca"
documentation = "https://openpgp-ca.org/doc/"
edition = "2018"

[[bin]]
name = "openpgp-ca-restd"
path = "src/bin.rs"

[dependencies]
structopt = "0.3"
clap = "2.33"
once_cell = "1.4"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }

sequoia-openpgp = "1.1"

openpgp-ca-lib = { path = "../openpgp-ca-lib", version = "0.11" }

# restd
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1.13.1", features = ["rt-multi-thread"] }

# client
reqwest = { version = "0.11", features = ["blocking", "json"] }

# for tests
[dev-dependencies]
gnupg-test-wrapper = { path = "../gnupg-test-wrapper" }